# Karna-vLM

./: FIXES_COMPLETED.md  README.md  api.py  fix_model.py  index.html  pyproject.toml
configs/: model_mid.yaml  model_small.yaml  model_tiny.yaml  train_stage1.yaml  train_stage2.yaml
docs/: ARCHITECTURE.md  AUDIT.md  BRIEF.md  DEEP_ARCHITECTURE.md
src/karna_vlm/: __init__.py  cli.py
src/karna_vlm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/karna_vlm/api/: __init__.py  server.py
src/karna_vlm/data/: __init__.py  collators.py  datasets.py  manifests.py  mixtures.py  schemas.py  templates.py
src/karna_vlm/evaluation/: __init__.py  ablations.py  caption.py  grounding.py  instruction.py  latency.py  reports.py  vqa.py
src/karna_vlm/inference/: __init__.py  chat.py  generate.py  structured_output.py  visualize.py
src/karna_vlm/models/: __init__.py  vlm_model.py
src/karna_vlm/models/bridge/: __init__.py  bridge_interface.py  gated_bridge.py  instruction_conditioned.py  linear_projector.py  qformer_lite.py  resampler.py
src/karna_vlm/models/decoder/: __init__.py  decoder_interface.py  hf_decoder.py
src/karna_vlm/models/projector/: __init__.py  output_heads.py
src/karna_vlm/models/prompt_packing/: __init__.py  packer.py
src/karna_vlm/models/vision/: __init__.py  clip_encoder.py  encoder_interface.py  siglip_encoder.py
src/karna_vlm/safety/: __init__.py  filters.py  model_card.py  policy.py
src/karna_vlm/training/: __init__.py  checkpointing.py  lora.py  optim.py  stage1_bootstrap.py  stage2_multitask.py  stage3_domain.py  stage4_distill.py  trainer.py
src/karna_vlm/utils/: __init__.py  distributed.py  io.py  logging_utils.py  profiling.py  seed.py
tests/: __init__.py  test_api_endpoints.py  test_bridge_shapes.py  test_config.py  test_content_filter_edge_cases.py  test_data.py  test_evaluation.py  test_integration.py  test_lora.py  test_prompt_packing.py  test_safety.py  test_training_smoke.py
